# kami_excel_extractor

./: .env.example  .gitignore  .ruff.toml  AGENTS.md  CONTRIBUTING.md  Dockerfile.worker  GEMINI.md  README.md  USAGE.md  benchmark_extractor.py  benchmark_optimization.py  benchmark_test.xlsx  complex_report.xlsx  docker-compose.yml  extractor_develop.py  litellm-config.yaml  pyproject.toml  run_batch_test.py  run_exhaustive_test.py  run_final_mega_verify.py  run_final_verify.py  run_test.py  simple_table.xlsx
.antigravitycli/: c0666aa8-359b-487a-b4bb-913c577789ba.json
.jules/: bolt.md
benchmarks/: benchmark_encoding.py
docs/: AGENTS.md  extraction_engine.md  improvement_proposals.md  ollama.md  operational_check.md  rag_optimization_guide.md  status_report.md  visual_inspection_report.md
examples/: ollama_demo.py
mega_test_out/: .cache.db
output/: .cache.db
plan/: architecture.md  cost_analysis.md  docker_setup.md  docx_conversion_plan.md  image_pagination.md  metadata_extraction.md  overview.md  pagination_caching_impl.md  reliability_improvements.md  rendering_pipeline.md  testing_guide.md  vlm_integration.md
scratch/: benchmark_extractor.py  check_style_id.py  reproduce_unicode_issue.py  test_cache.xlsx  test_large.xlsx  verify_cache_logic.py
src/: converter.py  create_complex_sample.py  create_sample.py  extractor.py  main.py  run_container_verify.py  run_debug.py  run_test.py
test_real_data_out/: complex_kami_sample_rag.json  complex_kami_sample_result.json  realistic_business_report_rag.json  realistic_business_report_result.json
(+117 files in other folders)
