[project]
name = "kami-excel-extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-generativeai>=0.8.6",
    "litellm>=1.83.4",
    "openai>=2.24.0",
    "openpyxl>=3.1.5",
    "defusedxml>=0.7.1",
    "pillow>=12.1.1",
    "PyYAML>=6.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.0.1",
    "pytest-cov>=7.1.0",
    "pydantic>=2.10.0",
    "aiofiles>=25.1.0",
]

[project.scripts]
kami-excel = "kami_excel_extractor.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "strict"
